# ydata-profiling-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
kubernetes/: ingress.yml  stateful.yml
src/: main.py  my_service.py
tests/: test_service.py
